# Langchain-workshop

./: README.md  example.env  pyproject.toml  requirement.txt
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_conversation_with_user.py
2_prompt_templates/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
3_chains/: 1_chains_basics.py  2_chains_extended.py  3_chains_parallel.py  4_chains_branching.py
4_rag/: 1a_rag_web.py  1b_rag_doc.py  2_rag_text_splitting_deep_dive.py  3_rag_retriever_deep_dive.py  4_rag_conversational.py  5_rag_web_scrape_firecrawl.py  test.py
